--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
         <div id="links">
-            <a class="btn-grad" href="instagram.com/machadotried" target="_blank" rel="noopener noref">Instagram</a>
-            <a class="btn-grad" href="twitter.com/machadotried" target="_blank" rel="noopener noref">Twitter</a>
+            <a class="btn-grad" href="https://www.instagram.com/machadotried" target="_blank" rel="noopener noref">Instagram</a>
+            <a class="btn-grad" href="https://www.twitter.com/machadotried" target="_blank" rel="noopener noref">Twitter</a>
         </div>
     </main>
 </body>
