Added LinkedIn to link tree

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div id="links">
             <a class="btn-grad" href="https://www.instagram.com/machadotried" target="_blank" rel="noopener noref">Instagram</a>
             <a class="btn-grad" href="https://www.twitter.com/machadotried" target="_blank" rel="noopener noref">Twitter</a>
+            <a class="btn-grad" href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a" target="_blank" rel="noopener noref">LinkedIn</a>
         </div>
     </main>
 
