--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
             <h2 class="info">He/him | 20 | PT<br>Informatics Engineering @ Universidade de Coimbra</h2>
         </div>
         <!-- Navigation buttons below (future implementation) -->
-        <!-- <div class="divider"></div>
-        <nav>
-            <a href="https://twitter.com">Test 1</a>
-            <a>Test 2</a>
-        </nav> -->
+        <!-- Use divider class and nav for links (already styled) -->
     </div>
     
     <main>
@@ -44,6 +40,7 @@
             sidebar.classList.toggle("visible");
             x.classList.toggle("menu-animation");
         }
+        // Create a function to enlarge profile picture?
     </script>
 </body>
 </html>
