--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="sidebar">
         <div id="sidewrapper">
             <figure>
-                <img id="pfp" src="files/test.png" alt="Profile picture">
+                <img id="pfp" src="files/profile.png" alt="Profile picture">
             </figure>
             <h1 class="info">Rodrigo Machado</h1>
             <h2 class="info">He/him | 20 | PT<br>Informatics Engineering @ Universidade de Coimbra</h2>
