--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Link tree</title>
     </head>
     <body>
-        <div class="menu" onclick="showMenu(this)">
+        <div class="menu" onclick="toggleMenu(this)">
             <div class="b1"></div>
             <div class="b2"></div>
             <div class="b3"></div>
