--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         
         <!-- Profile Picture (fullscreen) -->
-        <figure class="imgbg opacity-transition no-render" id="fullprofile" onclick="hide(this); hide('close');">
+        <div class="imgbg no-render" id="fullprofile" onclick="hide(this); hide('close');">
             <img class="fullpicture" src="files/profile.png" alt="Profile picture">
-        </figure>
+        </div>
 
         <div id="close" class="no-render" onclick="hide(this);hide('fullprofile');">
             <span>BACK</span>
