--- a/index.html
+++ b/index.html
@@ -1,56 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
-        <link rel="stylesheet" href="style.css" type="text/css">
-    </header>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="interactive.js" type="text/javascript"></script>
-        <title>Link tree</title>
-    </head>
-    <body>
-        <div id="menu" onclick="toggleMenu(this)">
-            <div class="b1 menu"></div>
-            <div class="b2 menu"></div>
-            <div class="b3 menu"></div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/684722c2ef.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Link Tree</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.twitter.com/machadotried"
+          >
+            <i class="fab fa-twitter fa-2x"></i>
+            <span class="link-text">Twitter</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.instagram.com/machadotried"
+          >
+            <i class="fab fa-instagram fa-2x"></i>
+            <span class="link-text">Instagram</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a"
+          >
+            <i class="fab fa-linkedin fa-2x"></i>
+            <span class="link-text">LinkedIn</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://github.com/denioma"
+          >
+            <i class="fab fa-github fa-2x"></i>
+            <span class="link-text">GitHub</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-        <div id="sidebar" class="opacity-transition color-transition">
-            <figure>
-                <img id="pfp" src="files/profile.png" alt="Profile picture" onclick="showPicture('fullprofile')">
-            </figure>
-            <h1 class="info">Rodrigo Machado</h1>
-            <h2 class="info">He/him | 20 | PT<br>Informatics Engineering @ Universidade de Coimbra</h2>
-            <!-- Navigation buttons below (future implementation) -->
-            <!-- Use divider class and nav tag for navigation links (already styled) -->
-        </div>
-        
-        <!-- Close button for sidebar in mobile mode -->
-        <div id="close" class="no-render" onclick="hide(this);hide('fullprofile');">
-            <span>BACK</span>
-            <div id="c1 no-render"></div>
-            <div id="c2 no-render"></div>
-        </div>
-
-        <!-- Profile Picture (fullscreen) -->
-        <div class="imgbg no-render" id="fullprofile" onclick="hide(this); hide('close');">
-            <img class="fullpicture" src="files/profile.png" alt="Profile picture">
-        </div>
-
-        <!-- Theme selector -->
-        <div class="theme-selector" onclick="themeChange();">
-            <img id="light-theme" class="no-render" src="files/OOjs_UI_icon_bright_test.svg" alt="Light mode" />
-            <img id="dark-theme" src="files/OOjs_UI_icon_moon.svg" alt="Dark mode" />
-        </div>
-
-        <main>
-            <div id="links">
-                <a class="btn-grad" href="https://www.instagram.com/machadotried" target="_blank" rel="noopener noref">Instagram</a>
-                <a class="btn-grad" href="https://www.twitter.com/machadotried" target="_blank" rel="noopener noref">Twitter</a>
-                <a class="btn-grad" href="https://www.github.com/denioma" target="_blank" rel="noopener noref">GitHub</a>
-                <a class="btn-grad" href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a" target="_blank" rel="noopener noref">LinkedIn</a>
-            </div>
-        </main>
-    </body>
+    <main>
+      <img id="profile" src="assets/profile.png" alt="Profile image" />
+      <div>
+        <h1>Rodrigo Machado</h1>
+        <h3>He/Him | 21 years old</h3>
+        <p>
+          Hi! I'm a student at Universidade de Coimbra, finishing my Bachelor's
+          degree in Informatics Engineering. I'm planning on pursuing a Master's
+          degree afterwards, just not yet sure which...
+        </p>
+        <!-- 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis purus ut varius gravida. Sed eget luctus mi. Proin maximus, massa ac ullamcorper scelerisque, turpis neque lacinia sapien, a sodales nisl tellus in diam. Nunc posuere at nibh sed imperdiet. Ut ut mattis urna. Phasellus sit amet imperdiet velit. Pellentesque eu urna eros. Sed malesuada dictum arcu, id viverra dui lobortis eget. Quisque vulputate ut nisi vitae accumsan. Sed lacinia vitae diam nec ornare.</p>
+          <p>Cras arcu nisi, pellentesque eu consectetur scelerisque, tristique quis elit. Proin dictum, sem quis hendrerit rhoncus, nunc turpis iaculis turpis, aliquet ultrices lacus nunc in leo. Donec quis purus sit amet elit dictum lobortis. Fusce dictum, erat ac aliquet porttitor, nisi arcu ullamcorper quam, quis porta urna neque non nisi. Nullam at blandit libero. Aliquam erat volutpat. Etiam dignissim dictum metus, ut luctus orci semper non. Cras sit amet placerat diam. Quisque volutpat magna nec laoreet pretium. Proin cursus sapien vel nisl rhoncus, a porta nisi tristique.</p>
+          <p>Cras non metus sit amet diam sagittis posuere. Vestibulum iaculis urna sit amet feugiat fringilla. Duis vel nulla metus. Maecenas sit amet justo mi. Proin ultrices felis congue ligula convallis, vel finibus risus feugiat. Nam libero lectus, maximus nec enim in, aliquet ullamcorper orci. Curabitur scelerisque metus a arcu tincidunt accumsan. Quisque vel fermentum augue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec maximus ipsum eu dolor ullamcorper ornare.</p> 
+        -->
+      </div>
+    </main>
+  </body>
 </html>
