Update + Visual candy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/684722c2ef.js"
       crossorigin="anonymous"
     ></script>
-    <title>Link Tree</title>
+    <title>Rodrigo Machado</title>
   </head>
   <body>
     <nav class="navbar">
@@ -71,11 +71,6 @@
           degree in Informatics Engineering. I'm planning on pursuing a Master's
           degree afterwards, just not yet sure which...
         </p>
-        <!-- 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis purus ut varius gravida. Sed eget luctus mi. Proin maximus, massa ac ullamcorper scelerisque, turpis neque lacinia sapien, a sodales nisl tellus in diam. Nunc posuere at nibh sed imperdiet. Ut ut mattis urna. Phasellus sit amet imperdiet velit. Pellentesque eu urna eros. Sed malesuada dictum arcu, id viverra dui lobortis eget. Quisque vulputate ut nisi vitae accumsan. Sed lacinia vitae diam nec ornare.</p>
-          <p>Cras arcu nisi, pellentesque eu consectetur scelerisque, tristique quis elit. Proin dictum, sem quis hendrerit rhoncus, nunc turpis iaculis turpis, aliquet ultrices lacus nunc in leo. Donec quis purus sit amet elit dictum lobortis. Fusce dictum, erat ac aliquet porttitor, nisi arcu ullamcorper quam, quis porta urna neque non nisi. Nullam at blandit libero. Aliquam erat volutpat. Etiam dignissim dictum metus, ut luctus orci semper non. Cras sit amet placerat diam. Quisque volutpat magna nec laoreet pretium. Proin cursus sapien vel nisl rhoncus, a porta nisi tristique.</p>
-          <p>Cras non metus sit amet diam sagittis posuere. Vestibulum iaculis urna sit amet feugiat fringilla. Duis vel nulla metus. Maecenas sit amet justo mi. Proin ultrices felis congue ligula convallis, vel finibus risus feugiat. Nam libero lectus, maximus nec enim in, aliquet ullamcorper orci. Curabitur scelerisque metus a arcu tincidunt accumsan. Quisque vel fermentum augue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec maximus ipsum eu dolor ullamcorper ornare.</p> 
-        -->
       </div>
     </main>
   </body>
