--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             rel="noopener noreferrer"
             href="https://www.twitter.com/machadotried"
           >
-            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fa-brands fa-twitter fa-2x"></i>
             <span class="link-text">Twitter</span>
           </a>
         </li>
@@ -32,7 +32,7 @@
             rel="noopener noreferrer"
             href="https://www.instagram.com/machadotried"
           >
-            <i class="fab fa-instagram fa-2x"></i>
+            <i class="fa-brands fa-instagram fa-2x"></i>
             <span class="link-text">Instagram</span>
           </a>
         </li>
@@ -43,7 +43,7 @@
             rel="noopener noreferrer"
             href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a"
           >
-            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="fa-brands fa-linkedin fa-2x"></i>
             <span class="link-text">LinkedIn</span>
           </a>
         </li>
@@ -54,7 +54,7 @@
             rel="noopener noreferrer"
             href="https://github.com/denioma"
           >
-            <i class="fab fa-github fa-2x"></i>
+            <i class="fa-brands fa-github fa-2x"></i>
             <span class="link-text">GitHub</span>
           </a>
         </li>
