--- a/index.html
+++ b/index.html
@@ -4,58 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script
       src="https://kit.fontawesome.com/684722c2ef.js"
       crossorigin="anonymous"
     ></script>
+    <!-- <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <script src="./assets/js/bootstrap.bundle.min.js"></script> -->
     <title>Rodrigo Machado</title>
   </head>
   <body>
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
+    <nav class="sidebar">
+      <ul class="sidebar-nav">
+        <li class="bar-item">
           <a
-            class="nav-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.twitter.com/machadotried"
-          >
-            <i class="fa-brands fa-twitter fa-2x"></i>
-            <span class="link-text">Twitter</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.instagram.com/machadotried"
-          >
-            <i class="fa-brands fa-instagram fa-2x"></i>
-            <span class="link-text">Instagram</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a"
-          >
-            <i class="fa-brands fa-linkedin fa-2x"></i>
-            <span class="link-text">LinkedIn</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
+            class="bar-link"
             target="_blank"
             rel="noopener noreferrer"
             href="https://github.com/denioma"
           >
             <i class="fa-brands fa-github fa-2x"></i>
-            <span class="link-text">GitHub</span>
+            <span class="bar-text">GitHub</span>
+          </a>
+        </li>
+        <li class="bar-item">
+          <a
+            class="bar-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/rodrigo-machado-49bb0418a"
+          >
+            <i class="fa-brands fa-linkedin fa-2x"></i>
+            <span class="bar-text">LinkedIn</span>
+          </a>
+        </li>
+        <li class="bar-item">
+          <a
+            class="bar-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.twitter.com/machadotried"
+          >
+            <i class="fa-brands fa-twitter fa-2x"></i>
+            <span class="bar-text">Twitter</span>
+          </a>
+        </li>
+        <li class="bar-item">
+          <a
+            class="bar-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.instagram.com/machadotried"
+          >
+            <i class="fa-brands fa-instagram fa-2x"></i>
+            <span class="bar-text">Instagram</span>
           </a>
         </li>
       </ul>
@@ -67,9 +69,18 @@
         <h1>Rodrigo Machado</h1>
         <h3>He/Him | 21 years old</h3>
         <p>
-          Hi! I'm a student at Universidade de Coimbra, finishing my Bachelor's
-          degree in Informatics Engineering. I'm planning on pursuing a Master's
-          degree afterwards, just not yet sure which...
+          Hi! I'm an Informatics Engineering student at the
+          <a href="https://uc.pt" target="_blank" rel="noopener noreferrer">
+            University of Coimbra
+          </a> with a Bachelor's degree and admitted for a Master's degree.<br>
+          I have developed class projects with 
+          <a href="https://github.com/denioma?tab=repositories&q=&type=&language=c">C</a> and 
+          <a href="https://github.com/denioma?tab=repositories&q=&type=&language=c%2B%2B">C++</a>, 
+          <a href="https://github.com/denioma/sd-spring" target="_blank" rel="noopener noreferrer">Spring Framework</a>,
+          <a href="https://github.com/denioma/bd-project" target="_blank" rel="noopener noreferrer">Flask microframework</a>,
+          <a href="https://gitlab.com/Adriana02B/es-pl9" target="_blank" rel="noopener noreferrer">Django framework</a>,
+          <a href="https://github.com/denioma/bd-project" target="_blank" rel="noopener noreferrer">PostgreSQL</a>,
+          basic Bootstrap and <a href="" onclick="alert('This page does not use Bootstrap!');">HTML+CSS</a>.
         </p>
       </div>
     </main>
