--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   <body>
     <nav class="sidebar">
       <ul class="sidebar-nav">
+                <li class="bar-item">
+          <a
+            class="bar-link"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://www.cienciavitae.pt/portal/en/541A-5400-4396"
+          >
+            <i class="fa-solid fa-briefcase fa-2x"></i>
+            <span class="bar-text">Curriculum Vitae</span>
+          </a>
+        </li>
         <li class="bar-item">
           <a
             class="bar-link"
