--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             href="https://github.com/denioma"
           >
             <i class="fa-brands fa-github fa-2x"></i>
-            <span class="bar-text">GitHub</span>
+            <span class="bar-text">Github</span>
           </a>
         </li>
         <li class="bar-item">
@@ -45,28 +45,6 @@
           >
             <i class="fa-brands fa-linkedin fa-2x"></i>
             <span class="bar-text">LinkedIn</span>
-          </a>
-        </li>
-        <li class="bar-item">
-          <a
-            class="bar-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.twitter.com/machadotried"
-          >
-            <i class="fa-brands fa-twitter fa-2x"></i>
-            <span class="bar-text">Twitter</span>
-          </a>
-        </li>
-        <li class="bar-item">
-          <a
-            class="bar-link"
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.instagram.com/machadotried"
-          >
-            <i class="fa-brands fa-instagram fa-2x"></i>
-            <span class="bar-text">Instagram</span>
           </a>
         </li>
       </ul>
@@ -81,7 +59,8 @@
           Hi! I'm an Informatics Engineering student at the
           <a href="https://uc.pt" target="_blank" rel="noopener noreferrer">
             University of Coimbra
-          </a> with a Bachelor's degree and admitted for a Master's degree.<br>
+          </a> with a Bachelor's degree, and currently enrolled full-time as 
+          a Master's student.<br>
           I have developed class projects with 
           <a href="https://github.com/denioma?tab=repositories&q=&type=&language=c">C</a> and 
           <a href="https://github.com/denioma?tab=repositories&q=&type=&language=c%2B%2B">C++</a>, 
